@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.8795 2005/01/17 23:04:26 adrianp Exp $
+$NetBSD: CHANGES,v 1.8796 2005/01/18 00:07:35 hubertf Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -397,3 +397,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated bogofilter to 0.92.8nb1 [wiz 2005-01-17]
 	Updated sun-jre15 to 5.0.1nb1 [jmmv 2005-01-17]
 	Updated bugzilla to 2.18 [adrianp 2005-01-17]
+	Updated tex-musixtex to 112 [hubertf 2005-01-18]
